为文章添加了标签

--- a/content/posts/正则表达式基础.md
+++ b/content/posts/正则表达式基础.md
@@ -2,6 +2,7 @@
 date: '2025-10-14T15:14:13+08:00'
 draft: false
 title: '正则表达式基础'
+tags: ["正则表达式"]
 ---
 |    模式     | 意义                                                         |
 | :---------: | ------------------------------------------------------------ |
