新增了一些插件，使得网站可以渲染Latex和Mermaid

--- a/content/posts/编译原理算法做题家简单总结.md
+++ b/content/posts/编译原理算法做题家简单总结.md
@@ -3,6 +3,7 @@ date: '2025-12-16T06:33:48Z'
 draft: false
 title: '编译原理算法做题家简单总结'
 tags: ["编译原理", "做题"]
+math: true
 ---
 
 > 本文档的内容只针对编译原理部分算法进行了简单通俗的总结，略过了比较复杂的东西。
